src/PQLParser.java
// Generated from PQL.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PQLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		UNIVERSE=1, ATTRIBUTE_ID=2, ATTRIBUTE_NAME=3, ATTRIBUTE_MODEL=4, STRING=5, 
		INTEGER=6, VARIABLE_NAME=7, SIMILARITY=8, LP=9, RP=10, LB=11, RB=12, LSB=13, 
		RSB=14, DQ=15, EOS=16, SEP=17, ASSIGN=18, TILDE=19, ESC_SEQ=20, UNICODE_ESC=21, 
		HEX_DIGIT=22, WS=23, LINE_COMMENT=24, SELECT=25, FROM=26, WHERE=27, EQUALS=28, 
		OVERLAPS=29, WITH=30, SUBSET=31, PROPER=32, GET_TASKS=33, NOT=34, AND=35, 
		OR=36, ANY=37, EACH=38, ALL=39, IN=40, IS=41, OF=42, TRUE=43, FALSE=44, 
		UNKNOWN=45, UNION=46, INTERSECTION=47, DIFFERENCE=48, CAN_OCCUR=49, ALWAYS_OCCURS=50, 
		CAN_CONFLICT=51, CAN_COOCCUR=52, CONFLICT=53, COOCCUR=54, TOTAL_CAUSAL=55, 
		TOTAL_CONCUR=56;
	public static final String[] tokenNames = {
		"<INVALID>", "'*'", "'id'", "'name'", "'model'", "STRING", "INTEGER", 
		"VARIABLE_NAME", "SIMILARITY", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"'\"'", "';'", "','", "'='", "'~'", "ESC_SEQ", "UNICODE_ESC", "HEX_DIGIT", 
		"WS", "LINE_COMMENT", "'SELECT'", "'FROM'", "'WHERE'", "'EQUALS'", "'OVERLAPS'", 
		"'WITH'", "'SUBSET'", "'PROPER'", "'GetTasks'", "'NOT'", "'AND'", "'OR'", 
		"'ANY'", "'EACH'", "'ALL'", "'IN'", "'IS'", "'OF'", "'TRUE'", "'FALSE'", 
		"'UNKNOWN'", "'UNION'", "'INTERSECT'", "'EXCEPT'", "'CanOccur'", "'AlwaysOccurs'", 
		"'CanConflict'", "'CanCooccur'", "'Conflict'", "'Cooccur'", "'TotalCausal'", 
		"'TotalConcurrent'"
	};
	public static final int
		RULE_query = 0, RULE_variables = 1, RULE_variable = 2, RULE_varName = 3, 
		RULE_attributes = 4, RULE_attribute = 5, RULE_locations = 6, RULE_location = 7, 
		RULE_universe = 8, RULE_attributeID = 9, RULE_attributeName = 10, RULE_attributeModel = 11, 
		RULE_locationID = 12, RULE_locationDirectory = 13, RULE_setOfTasks = 14, 
		RULE_tasks = 15, RULE_setOfTasksLiteral = 16, RULE_task = 17, RULE_approximate = 18, 
		RULE_label = 19, RULE_similarity = 20, RULE_setOfTasksConstruction = 21, 
		RULE_unaryPredicateConstruction = 22, RULE_binaryPredicateConstruction = 23, 
		RULE_anyAll = 24, RULE_unaryPredicateName = 25, RULE_binaryPredicateName = 26, 
		RULE_predicate = 27, RULE_proposition = 28, RULE_unaryPredicate = 29, 
		RULE_binaryPredicate = 30, RULE_unaryPredicateMacro = 31, RULE_binaryPredicateMacro = 32, 
		RULE_binaryPredicateMacroTaskSet = 33, RULE_binaryPredicateMacroSetSet = 34, 
		RULE_anyEachAll = 35, RULE_setPredicate = 36, RULE_taskInSetOfTasks = 37, 
		RULE_setComparison = 38, RULE_setComparisonOperator = 39, RULE_truthValue = 40, 
		RULE_logicalTest = 41, RULE_union = 42, RULE_intersection = 43, RULE_difference = 44, 
		RULE_negation = 45, RULE_isTrue = 46, RULE_isNotTrue = 47, RULE_isFalse = 48, 
		RULE_isNotFalse = 49, RULE_isUnknown = 50, RULE_isNotUnknown = 51, RULE_disjunction = 52, 
		RULE_conjunction = 53, RULE_parentheses = 54, RULE_setOfTasksParentheses = 55, 
		RULE_identical = 56, RULE_different = 57, RULE_overlapsWith = 58, RULE_subsetOf = 59, 
		RULE_properSubsetOf = 60;
	public static final String[] ruleNames = {
		"query", "variables", "variable", "varName", "attributes", "attribute", 
		"locations", "location", "universe", "attributeID", "attributeName", "attributeModel", 
		"locationID", "locationDirectory", "setOfTasks", "tasks", "setOfTasksLiteral", 
		"task", "approximate", "label", "similarity", "setOfTasksConstruction", 
		"unaryPredicateConstruction", "binaryPredicateConstruction", "anyAll", 
		"unaryPredicateName", "binaryPredicateName", "predicate", "proposition", 
		"unaryPredicate", "binaryPredicate", "unaryPredicateMacro", "binaryPredicateMacro", 
		"binaryPredicateMacroTaskSet", "binaryPredicateMacroSetSet", "anyEachAll", 
		"setPredicate", "taskInSetOfTasks", "setComparison", "setComparisonOperator", 
		"truthValue", "logicalTest", "union", "intersection", "difference", "negation", 
		"isTrue", "isNotTrue", "isFalse", "isNotFalse", "isUnknown", "isNotUnknown", 
		"disjunction", "conjunction", "parentheses", "setOfTasksParentheses", 
		"identical", "different", "overlapsWith", "subsetOf", "properSubsetOf"
	};

	@Override
	public String getGrammarFileName() { return "PQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public PQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(PQLParser.WHERE, 0); }
		public AttributesContext attributes() {
			return getRuleContext(AttributesContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode EOS() { return getToken(PQLParser.EOS, 0); }
		public LocationsContext locations() {
			return getRuleContext(LocationsContext.class,0);
		}
		public TerminalNode SELECT() { return getToken(PQLParser.SELECT, 0); }
		public TerminalNode FROM() { return getToken(PQLParser.FROM, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); variables();
			setState(123); match(SELECT);
			setState(124); attributes();
			setState(125); match(FROM);
			setState(126); locations();
			setState(129);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(127); match(WHERE);
				setState(128); predicate();
				}
			}

			setState(131); match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitVariables(this);
		}
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VARIABLE_NAME) {
				{
				{
				setState(133); variable();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public SetOfTasksContext setOfTasks() {
			return getRuleContext(SetOfTasksContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(PQLParser.ASSIGN, 0); }
		public TerminalNode EOS() { return getToken(PQLParser.EOS, 0); }
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); varName();
			setState(140); match(ASSIGN);
			setState(141); setOfTasks();
			setState(142); match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public TerminalNode VARIABLE_NAME() { return getToken(PQLParser.VARIABLE_NAME, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterVarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitVarName(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(VARIABLE_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributesContext extends ParserRuleContext {
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode SEP(int i) {
			return getToken(PQLParser.SEP, i);
		}
		public List<TerminalNode> SEP() { return getTokens(PQLParser.SEP); }
		public AttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitAttributes(this);
		}
	}

	public final AttributesContext attributes() throws RecognitionException {
		AttributesContext _localctx = new AttributesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attributes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); attribute();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP) {
				{
				{
				setState(147); match(SEP);
				setState(148); attribute();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public UniverseContext universe() {
			return getRuleContext(UniverseContext.class,0);
		}
		public AttributeIDContext attributeID() {
			return getRuleContext(AttributeIDContext.class,0);
		}
		public AttributeNameContext attributeName() {
			return getRuleContext(AttributeNameContext.class,0);
		}
		public AttributeModelContext attributeModel() {
			return getRuleContext(AttributeModelContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitAttribute(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attribute);
		try {
			setState(158);
			switch (_input.LA(1)) {
			case UNIVERSE:
				enterOuterAlt(_localctx, 1);
				{
				setState(154); universe();
				}
				break;
			case ATTRIBUTE_ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(155); attributeID();
				}
				break;
			case ATTRIBUTE_NAME:
				enterOuterAlt(_localctx, 3);
				{
				setState(156); attributeName();
				}
				break;
			case ATTRIBUTE_MODEL:
				enterOuterAlt(_localctx, 4);
				{
				setState(157); attributeModel();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationsContext extends ParserRuleContext {
		public LocationContext location(int i) {
			return getRuleContext(LocationContext.class,i);
		}
		public List<LocationContext> location() {
			return getRuleContexts(LocationContext.class);
		}
		public TerminalNode SEP(int i) {
			return getToken(PQLParser.SEP, i);
		}
		public List<TerminalNode> SEP() { return getTokens(PQLParser.SEP); }
		public LocationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_locations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterLocations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitLocations(this);
		}
	}

	public final LocationsContext locations() throws RecognitionException {
		LocationsContext _localctx = new LocationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_locations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160); location();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP) {
				{
				{
				setState(161); match(SEP);
				setState(162); location();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationContext extends ParserRuleContext {
		public UniverseContext universe() {
			return getRuleContext(UniverseContext.class,0);
		}
		public LocationIDContext locationID() {
			return getRuleContext(LocationIDContext.class,0);
		}
		public LocationDirectoryContext locationDirectory() {
			return getRuleContext(LocationDirectoryContext.class,0);
		}
		public LocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_location; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterLocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitLocation(this);
		}
	}

	public final LocationContext location() throws RecognitionException {
		LocationContext _localctx = new LocationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_location);
		try {
			setState(171);
			switch (_input.LA(1)) {
			case UNIVERSE:
				enterOuterAlt(_localctx, 1);
				{
				setState(168); universe();
				}
				break;
			case INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(169); locationID();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(170); locationDirectory();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UniverseContext extends ParserRuleContext {
		public TerminalNode UNIVERSE() { return getToken(PQLParser.UNIVERSE, 0); }
		public UniverseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_universe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterUniverse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitUniverse(this);
		}
	}

	public final UniverseContext universe() throws RecognitionException {
		UniverseContext _localctx = new UniverseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_universe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173); match(UNIVERSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeIDContext extends ParserRuleContext {
		public TerminalNode ATTRIBUTE_ID() { return getToken(PQLParser.ATTRIBUTE_ID, 0); }
		public AttributeIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterAttributeID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitAttributeID(this);
		}
	}

	public final AttributeIDContext attributeID() throws RecognitionException {
		AttributeIDContext _localctx = new AttributeIDContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_attributeID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175); match(ATTRIBUTE_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeNameContext extends ParserRuleContext {
		public TerminalNode ATTRIBUTE_NAME() { return getToken(PQLParser.ATTRIBUTE_NAME, 0); }
		public AttributeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterAttributeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitAttributeName(this);
		}
	}

	public final AttributeNameContext attributeName() throws RecognitionException {
		AttributeNameContext _localctx = new AttributeNameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attributeName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177); match(ATTRIBUTE_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeModelContext extends ParserRuleContext {
		public TerminalNode ATTRIBUTE_MODEL() { return getToken(PQLParser.ATTRIBUTE_MODEL, 0); }
		public AttributeModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterAttributeModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitAttributeModel(this);
		}
	}

	public final AttributeModelContext attributeModel() throws RecognitionException {
		AttributeModelContext _localctx = new AttributeModelContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_attributeModel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179); match(ATTRIBUTE_MODEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationIDContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(PQLParser.INTEGER, 0); }
		public LocationIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_locationID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).enterLocationID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PQLListener ) ((PQLListener)listener).exitLocationID(this);
		}
	}

	public final LocationIDContext locationID() throws RecognitionException {
		LocationIDContext _localctx = new LocationIDContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_locationID);
		try {
